--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/influsion/small-html-css-developments#readme",
   "devDependencies": {
+    "browser-sync": "^2.27.4",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
